--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -14,6 +14,15 @@
     <%= form.label :body %>
     <%= form.text_area :body %>
   </p>
+
+  <p>
+    <%= form.label :status %><br>
+    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+  </p>
+<br/>
+
+
+
   <p>
     <%= form.submit %>
   </p>
