--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,18 @@
 <h1>Articles#index</h1>
 <p>Find me in app/views/articles/index.html.erb</p>
 
+Our blog has <%= Article.public_count %> articles and counting!
+
+
 <ul>
 <% @articles.each do |article| %>
+    <% unless article.archived? %>
 <li>
   <a href="/articles/<% article.id %>"> <%= article.title %>
   </a>
   <%= link_to "show", article_path(article.id) %>
 </li>
+      <% end %>
 <% end %>
 </ul>
 
