--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -9,6 +9,13 @@
     <%= form.label :body %>
     <%= form.text_area :body %>
   </p>
+
+  <p>
+    <%= form.label :status %><br>
+    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+  </p>
+<br/>
+
   <p>
     <%= form.submit %>
   </p>
